<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rainbow_swirls_vector_background_523382"
    tools:context="com.example.sambulo.administrative.Personal_information">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/personalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/personalInfo"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/personName"
            android:inputType="textPersonName"
            android:textSize="12sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/personLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/personLastName"
            android:inputType="textPersonName"
            android:textSize="12sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvgender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:text="Gender"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <Spinner
            android:id="@+id/spinnergender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvClas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/tvClass"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <Spinner
            android:id="@+id/spinnerClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Classes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/tvRace"
            android:textSize="14sp"
            android:textStyle="normal|bold" />

        <Spinner
            android:id="@+id/spinnerRace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Race"
            android:prompt="@string/racePrompt" />

    </LinearLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/shift"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/shift"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/rbHalf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbHalf" />

        <RadioButton
            android:id="@+id/rbFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbFull" />
    </RadioGroup>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateOfbirthGetter"/>

    <EditText
        android:id="@+id/postalAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/postalAdd"
        android:inputType="text|textPostalAddress"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/idNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/idNum"
        android:inputType="number"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/enrollDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enrolDate"
        android:inputType="date"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/language"
        android:inputType="text"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/parentsInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/parentsInfo"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:stretchColumns="1">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/motherTitile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/motherTitle"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/fatherTitile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/fatherTitle"
                android:textSize="18sp"
                android:textStyle="normal|bold" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/motherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/motherName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/fatherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/fatherName"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/motherAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/motherAddress"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/fatherAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/fatherAddress"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/motherPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="11"
                android:gravity="center"
                android:hint="@string/motherPhone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/fatherPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="11"
                android:gravity="center"
                android:hint="@string/fatherPhone"
                android:inputType="number|phone" />
        </TableRow>
    </TableLayout>



    <TextView
        android:id="@+id/docterInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/docterInfo"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_margin="10dp">
        <TableRow>

            <EditText
                android:id="@+id/docterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/docterName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/docNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/docPhone"
                android:inputType="phone" />
        </TableRow>
        <TableRow>

            <EditText
                android:id="@+id/medicalAid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/medName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/medPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/medPlan"
                android:inputType="textPersonName" />


        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/medNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="11"
                android:gravity="center_horizontal"
                android:hint="@string/docPhone"
                android:inputType="number" />

            <EditText
                android:id="@+id/allergies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="11"
                android:gravity="center_horizontal"
                android:hint="@string/allergies"
                android:inputType="textPersonName" />
        </TableRow>


        <TextView
            android:id="@+id/shopBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/shopBalance"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textStyle="normal|bold" />
    </TableLayout>


    <Button
        android:id="@+id/btnOk"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="buttonOk"
        android:text="@string/btnOk" />

</LinearLayout>



</ScrollView>
