<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:weightSum="1">

    <TextView
        android:id="@+id/title_maintanance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/Title" />




    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/statusIssue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statusIssue"
            android:textSize="18sp"
            android:layout_weight="3"
            android:textStyle="normal|bold|italic"
            android:layout_marginBottom="10dp"/>


        <ImageView
            android:id="@+id/stausImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:srcCompat="@mipmap/ic_launcher" />

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/learnerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/learnerName"
        android:layout_marginBottom="10dp"/>


    <TextView
        android:id="@+id/createdDate"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createdDate"
        android:layout_marginBottom="10dp"/>

    <TextView
            android:id="@+id/updatedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updatedate"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/actualReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualReport"
        android:layout_weight="0.61" />
</LinearLayout>