<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shop_transaction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/rainbow_swirls_vector_background_523382"
    android:orientation="vertical"

    tools:context="com.example.sambulo.administrative.shopTransaction"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="63dp">

        <Button
            android:id="@+id/button10c"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/tens" />

        <Button
            android:id="@+id/button20c"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/twenthies" />

        <Button
            android:id="@+id/button50c"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/fifty" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/buttonR1"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/OneRand" />

        <Button
            android:id="@+id/buttonR2"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/TwoRand" />

        <Button
            android:id="@+id/buttonR5"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/FiveRands" />
    </LinearLayout>

    <TextView
        android:id="@+id/balancetv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.16"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSubmitTransaction"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/btnSbmtTran" />

        <Button
            android:id="@+id/btnResetTransaction"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/btnReset" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCurrentBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:gravity="center_vertical"
        android:text="@string/CurrentBalance"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/tvCurrentTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:gravity="center_vertical"
        android:text="@string/Currenttrans"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/tvAfterTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:gravity="center_vertical"
        android:text="@string/After"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

</LinearLayout>
