<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reports"
    android:layout_width="match_parent"
    android:background="@drawable/rainbow_swirls_vector_background_523382"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:orientation="vertical"
    tools:context="com.example.sambulo.administrative.REPORTS"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/pic"
        android:id="@+id/imageView2"
        android:layout_weight="0.22" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        android:gravity="center"
        android:text="@string/heading_report"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/btnReportMaintein"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:onClick="setBtnReportMaintein"
        android:text="@string/btn_maiteinance" />

    <Button
        android:id="@+id/btnReportLearner"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:onClick="setBtnReportLearner"
        android:text="@string/btn_learner" />
</LinearLayout>
